--- a/client/nav.jade
+++ b/client/nav.jade
@@ -73,6 +73,8 @@ template(name='nav')
                             //- a.icon.item(href="/user/#{currentUser.username}" class="{{isActiveRoute regex='profile'}}")
                             //-     //- +i name='new-post'
                             //-     i.big.mail.icon(class=mail_icon_class title="#{unread_count} Unread")
+                            a.icon.item(href="/transactions" class="{{isActivePath '/transactions'}}" title='transactions')
+                                +i name='cashbook'
                             a.icon.item(href="/chat" class="{{isActivePath '/chat'}}" title='chat')
                                 +i name='chat'
                             a.icon.item(href="/karma" class="{{isActivePath '/karma'}}" title='karma')
