--- a/client/styles.css
+++ b/client/styles.css
@@ -3,7 +3,7 @@ body {
     font-size: 110% !important;
     /*line-height: 200% !important;*/
     /*background: #3d3d3d !important;*/
-    background: rgba(0, 0, 0, .05) !important
+    background: rgba(0, 0, 0, .02) !important
     /* background: #0e0e44 !important; */
 }
 
@@ -109,6 +109,14 @@ input:focus, textarea:focus {
     box-shadow: 0 1px 1px 1px rgba(50, 50, 100, 0.1) !important;
     background-color: grey !important;
     color: white !important;
+    /* transform: translate(0, 4px); */
+}
+
+.button:hover {
+    /* background-color: rgba(200, 200, 200, 0.5) !important; */
+    box-shadow: 0 2px 2px 2px rgba(50, 50, 100, 0.1) !important;
+    background-color: rgba(50, 50, 100, 0.1) !important;
+    /* color: white !important; */
     /* transform: translate(0, 4px); */
 }
 
