--- a/components/meals.jade
+++ b/components/meals.jade
@@ -106,8 +106,8 @@ template(name='reservations')
         .ui.tiny.statistic
             .value 
                 i.dollar.grey.icon
-                |#{money_earned}     
-            .label money earned
+                |#{karma_earned}     
+            .label karma earned
         
         if can_reserve
             .ui.basic.button.new_reservation 
