--- a/client/front.jade
+++ b/client/front.jade
@@ -5,38 +5,34 @@ template(name='front')
         //-         .ui.large.center.aligned.header 
         //-             +i name='apartment'
         //-             |Gold Run Community
-        .two.column.row
+        //- .two.column.row
+        //-     .column
+        //-         +healthclub_status
+        //-         +meal_widget
+        //-         +marketplace_widget
+        //-         //- .ui.header chat
+        //-         //- +model_scroller model='for_rent' header='For Rent' icon='business'
+        //-         //- +model_scroller model='event' header='Events' icon='calendar'
+        //-     .column
+        //-         +cal
+        //-         //- +model_scroller model='photo' header='Photos' icon='image'
+        .two.column.row    
             .column
-                +healthclub_status
-                +meal_widget
-                +marketplace_widget
-                //- .ui.header chat
-                //- +model_scroller model='for_rent' header='For Rent' icon='business'
-                //- +model_scroller model='event' header='Events' icon='calendar'
+                +model_scroller model='shop' header='marketplace' icon='shop'
             .column
-                +cal
-                //- +model_scroller model='photo' header='Photos' icon='image'
-        //- .three.column.row    
-        //-     .column
-        //-         +model_scroller model='marketplace' header='Marketplace' icon='shop'
-        //-     .column
-        //-         +model_scroller model='free' header='Free' icon='handshake'
-        //-     .column
-        //-         +model_scroller model='gr_post' header='Posts' icon='post'
-        //- .three.column.row    
-        //-     .column
-        //-         +model_scroller model='group' header='Groups' icon='groups'
-        //-     .column
-        //-         +model_scroller model='company' header='Businesses' icon='business'
-        //-     .column
-        //-         +model_scroller model='free' header='Free' icon='handshake'
-        //- .three.column.row    
-        //-     .column
-        //-         +model_scroller model='library' header='Library' icon='library'
-        //-     .column
-        //-         +model_scroller model='ad' header='Resident Ads' icon='presentation'
-        //-     .column
-        //-         +model_scroller model='for_rent' header='For Rent' icon='business'
+                +model_scroller model='gr_post' header='posts' icon='post'
+        .three.column.row    
+            .column
+                +model_scroller model='group' header='groups' icon='groups'
+            .column
+                +model_scroller model='company' header='businesses' icon='business'
+        .three.column.row    
+            .column
+                +model_scroller model='library' header='library' icon='library'
+            .column
+                +model_scroller model='ad' header='resident ads' icon='presentation'
+            .column
+                +model_scroller model='for_rent' header='for rent' icon='business'
 
 
 
@@ -100,9 +96,10 @@ template(name='event_doc_view')
 
 
 
-template(name='marketplace_doc_view')
+template(name='shop_doc_view')
     +image_view key='picture' direct=true
-    +html_view key='content' direct=true
+    +html_view key='description' direct=true
+    +number_view key='karma_price' direct=true
     //- +array_view key='tags' direct=true
 
 
@@ -115,8 +112,8 @@ template(name='model_scroller')
     .ui.smoothed.segment
         a.ui.inline.header.go_to_model(href="/m/#{model}")
             if icon 
-                //- +i name=icon
-                i.icon(class=icon)
+                +i name=icon
+                //- i.ico/n(class=icon)
             |#{header}
         //- if can_go_left            
         .ui.icon.button.go_left(class="{{#unless can_go_left}}disabled{{/unless}}")
