--- a/client/shop.jade
+++ b/client/shop.jade
@@ -1,33 +1,41 @@
 template(name='shop_card')
-    .ui.clearing.segment.stackable.grid
+    .ui.stackable.divided.grid
         .centered.row
             .sixteen.wide.column
                 a.pointer(href="/shop/#{_id}/view")
-                    img.ui.rounded.centered.fluid.image(src="{{c.url picture width=1000 height=1000 gravity='face' crop='crop'}}")
+                    img.ui.centered.rounded.image(src="{{c.url picture width=300 height=200 crop='fit'}}")
         .row
             .sixteen.wide.column
-                .ui.header #{title}
+                a.ui.small.grey.header(href="/shop/#{_id}/view") #{title}
         .row
             .sixteen.wide.column
-                +i name='tags' classes='ui mini inline image'
-                each tags
-                    .ui.basic.label #{this}
-                div
-                +i name='marker' classes='ui mini inline image'
-                each location_tags
-                    .ui.basic.label #{this}
-                .ui.basic.animated.fade.button.add_to_cart(title="#{karma_price} karma, click to add to cart")
-                    .visible.content
-                        .ui.header #{karma_price}k
+                //- +i name='tags' classes='ui mini inline image'
+                //- each tags
+                //-     .ui.basic.label #{this}
+                //- div
+                //- +i name='marker' classes='ui mini inline image'
+                //- each location_tags
+                //-     .ui.basic.label #{this}
+                //- .ui.basic.animated.fade.button.add_to_cart(title="#{karma_price} karma, click to add to cart")
+                //-     .visible.content
+                //-         .ui.header #{karma_price}k
+                //-     .hidden.content
+                //-         i.cart.plus.green.large.icon
+                .ui.header $#{dollar_price}
+                //- .ui.basic.animated.fade.button.add_to_cart(title="click to add to cart")
+                //-     .visible.content
+                //-         .ui.header 
+                //-             if dollar_price
+                //-                 |$#{dollar_price}
+                //-             else
+                //-                 |free
                     .hidden.content
                         i.cart.plus.green.large.icon
-                a.ui.basic.button(href="/shop/#{_id}/view")
-                    +i name='chevron right' classes='ui mini image'
-                if can_edit
-                    a.ui.basic.button(href="/shop/#{_id}/edit")
-                        +i name='pencil' classes='ui mini image'
-                if can_edit
-                    +edit_button
+                //- a.ui.basic.icon.button(href="/shop/#{_id}/view")
+                //-     +i name='chevron right' classes='ui mini image'
+                //- if can_edit
+                //-     a.ui.basic.button(href="/shop/#{_id}/edit")
+                //-         +i name='pencil' classes='ui mini image'
 
 
 template(name='add_karma')
@@ -52,20 +60,20 @@ template(name='add_karma_amount')
 template(name='shop_edit')
     with current_doc
         .ui.stackable.padded.grid
-            .four.wide.column
+            .eight.wide.column
+                a.ui.massive.basic.icon.button(href="/shop/#{_id}/view")
+                    i.big.green.checkmark.icon        
                 .ui.header #{title}
+                +text_edit key='title' icon='header' direct=true
                 +array_edit key='tags' icon='tags' direct=true
-                +array_edit key='location_tags' label='location tags' icon='marker' direct=true
-                +price_edit key='karma_price' icon='money' label='karma price' direct=true
-                +date_edit key='date_available' icon='calendar' label='date available' direct=true
-                +time_edit key='time_available' icon='clock' label='time available' direct=true
+                //- +array_edit key='location_tags' label='location tags' icon='marker' direct=true
+                //- +dollar_price_edit key='karma_price' icon='yin-yang' label='karma price' direct=true
+                +dollar_price_edit key='dollar_price' icon='money' label='dollar price' direct=true
+                //- +date_edit key='date_available' icon='calendar' label='date available' direct=true
+                //- +time_edit key='time_available' icon='clock' label='time available' direct=true
             .eight.wide.column
                 +image_edit key='picture' direct=true
                 +html_edit key='description' direct=true
-            .four.wide.column
-                a.ui.large.basic.button(href="/shop/#{_id}/view")
-                    i.large.green.checkmark.icon        
-                +reservations
 
 
 
@@ -73,34 +81,35 @@ template(name='shop_view')
     with current_doc
         .ui.stackable.padded.grid
             //- img.ui.large.rounded.image(src="{{c.url image width=500 height=500 gravity='face' crop='fill'}}")
-            .four.wide.column
+            .six.wide.column
+                img.ui.large.centered.rounded.image(src="{{c.url picture width=1000 height=400 crop='fit'}}")
+            .six.wide.column
                 .ui.header #{title}
-                +array_view key='tags' icon='tags' direct=true
-                +array_view key='location_tags' label='location tags' icon='marker' direct=true
-                +date_view key='date_available' label='date available' icon='calendar' direct=true
-                +time_view key='time_available' label='time available' icon='clock' direct=true
-                .ui.dividing.header
-                    |rules
-                .ui.header
-                    |signup before 24 hours
-                .ui.header
-                    |payment before 24 hours
-            .eight.wide.column
-                img.ui.large.rounded.image(src="{{c.url picture width=500 height=500 gravity='face' crop='fill'}}")
                 +html_view key='description' direct=true
                 .ui.header author #{_author_username}
                 with _author_id
                     +user_card
+                +array_view key='tags' icon='tags' direct=true
+                //- +array_view key='location_tags' label='location tags' icon='marker' direct=true
+                +dollar_price_view key='dollar_price' icon='money' label='dollar price' direct=true
+                //- +karma_price_view key='karma_price' icon='yin-yang' label='karma price' direct=true
+                +date_view key='date_available' label='date available' icon='calendar' direct=true
+                +time_view key='time_available' label='time available' icon='clock' direct=true
+                +product_transactions
             .four.wide.column
                 a.ui.large.icon.basic.button(href="/shop/#{_id}/edit")
                     i.pencil.icon
-                a.ui.large.icon.basic.button(href="/shop/#{_id}/view")
-                    i.right.chevron.icon        
-                +reservations
+                //- +reservations
                 +comments
                 with current_doc
-                    +voting
-                    .ui.header similar shops
-                    .ui.header alerts
-                    |alergen alert
-                    |#{alergen_alert}
+                    +voting_full
+                    //- .ui.header similar shops
+                    //- .ui.header alerts
+                    //- |alergen alert
+                    //- |#{alergen_alert}
+
+
+template(name='product_transactions')
+    .ui.header 
+        +i name='cashbook'
+        |transactions
