--- a/client/styles.css
+++ b/client/styles.css
@@ -111,6 +111,13 @@ input:focus, textarea:focus {
     color: white !important;
     /* transform: translate(0, 4px); */
 }
+.button.green {
+    /* background-color: rgba(200, 200, 200, 0.5) !important; */
+    box-shadow: 0 1px 1px 1px rgba(50, 50, 100, 0.1) !important;
+    background-color: green !important;
+    color: white !important;
+    /* transform: translate(0, 4px); */
+}
 
 .button:hover {
     /* background-color: rgba(200, 200, 200, 0.5) !important; */
