--- a/components/delta/delta.jade
+++ b/components/delta/delta.jade
@@ -2,7 +2,7 @@ template(name='delta')
     with current_model
         .ui.stackable.padded.grid
             .row
-                .four.wide.column.scrolling
+                .four.wide.column
                     .ui.inline.header
                         //- i.icon(class=icon)
                         +i name=icon
@@ -47,11 +47,11 @@ template(name='delta')
                     div
                     each sorted_facets
                         +facet
-                .twelve.wide.column
+                .twelve.wide.column.scrolling
                     //- .ui.inline.header
                     //-     |sort by
                     //- .ui.button
-                    .ui.stackable.padded.three.column.grid
+                    .ui.stackable.four.column.grid
                         each current_delta.result_ids
                             .column
                                 +delta_result
