init create transaction from dollar purchase

--- a/client/shop.jade
+++ b/client/shop.jade
@@ -113,3 +113,6 @@ template(name='product_transactions')
     .ui.header 
         +i name='cashbook'
         |transactions
+    each product_transactions
+        .ui.segment
+            |#{title} #{when}
