--- a/client/signatures.jade
+++ b/client/signatures.jade
@@ -15,7 +15,7 @@ template(name='rules_signing')
             else
                 +signature_edit key='signature' direct=true
             if signature_saved
-                .ui.big.blue.fluid.button.submit_rules
+                .ui.big.green.fluid.button.submit_rules
                     | submit
                     i.right.chevron.icon
 
