--- a/client/healthclub.jade
+++ b/client/healthclub.jade
@@ -189,7 +189,7 @@ template(name='checkin_card')
                     .ui.hidden.divider      
                     .ui.big.fluid.green.button.complete_checkin
                         //- +i name='treadmill' classes='ui inline image'
-                        .ui.inline.green.header 
+                        .ui.inline.white.inverted.header 
                             //- +i name='treadmill'
                             | complete check in
                             i.right.chevron.icon
