--- a/client/shop.jade
+++ b/client/shop.jade
@@ -72,15 +72,23 @@ template(name='shop_edit')
                 +dollar_price_edit key='dollar_price' icon='money' label='dollar price' direct=true
                 //- +date_edit key='date_available' icon='calendar' label='date available' direct=true
                 //- +time_edit key='time_available' icon='clock' label='time available' direct=true
-                +omega_edit
+                +omega_edit model='shop_type'
             .eight.wide.column
                 +image_edit key='picture' direct=true
                 +html_edit key='description' direct=true
 
 
 template(name='omega_edit')
-    +single_doc_edit key='shop_type' ref_model='shop_type' label='shop type' direct=true
+    .ui.header #{model}
+    each model_docs
+        .ui.button.select_child(class=child_selector_class)
+            if icon 
+                +i name=icon
+            |#{slug}
+    +subomega_edit submodel=submodel
+    //- +single_doc_edit key=model ref_model=model label=model direct=true
 
+template(name='subomega_edit')
 
 
 template(name='shop_view')
