--- a/client/profile/user_edit.jade
+++ b/client/profile/user_edit.jade
@@ -30,16 +30,17 @@ template(name='user_edit')
                                 .ui.hidden.divider
                                 +text_edit key='last_name' label='last name' direct=true
                                 .ui.hidden.divider
-                                //- +text_edit key='address' label='Address' direct=true
+                                +text_edit key='address' label='address' direct=true
                                 //- +number_edit key='healthclub_code' label='Healthclub Code' direct=true
                                 +number_edit key='unit_number' label='unit #' direct=true
                                 .ui.hidden.divider
                                 +number_edit key='building_number' label='building #' direct=true
                                 .ui.hidden.divider
-                                //- +text_edit key='building_code' label='Building Code' direct=true
+                                +text_edit key='building_code' label='Building Code' direct=true
                                 +date_edit key='start_date' label='start date' direct=true
                                 .ui.hidden.divider
                                 +pdf_edit key='lease_agreement' label='lease agreement' direct=true
+                                +pdf_edit key='lease_addendum' label='lease addendum' direct=true
                                 .ui.hidden.divider
                                 if user_is_owner
                                     +pdf_edit key='ownership_paperwork' label='ownership paperwork' direct=true
@@ -63,6 +64,7 @@ template(name='user_edit')
                                 else if user_is_resident
                                     +date_view key='expiration_date' label='expiration date' direct=true
                                     +pdf_view key='lease_agreement' label='lease agreement' direct=true
+                                    +pdf_edit key='lease_addendum' label='lease addendum' direct=true
                                 +pdf_view key='member_guidelines_and_waiver' label='lease agreement' direct=true
                         //- +text_edit key='email' label='email' direct=true
                         +phone_edit key='phone' label='phone' direct=true
