--- a/client/signatures.jade
+++ b/client/signatures.jade
@@ -2,7 +2,7 @@ template(name='rules_signing')
     with signing_doc
         +document_view key='rules_regs'
         +user_card resident
-        .ui.header i agree to the rules and regulations
+        .ui.header I agree to the rules and regulations
             if agree
                 i.huge.checkmark.green.link.icon.agree
             else
@@ -16,7 +16,7 @@ template(name='rules_signing')
                 +signature_edit key='signature' direct=true
             if signature_saved
                 .ui.big.green.fluid.button.submit_rules
-                    | submit
+                    | submit signing
                     i.right.chevron.icon
 
 
@@ -58,5 +58,5 @@ template(name='add_guest')
                 +signature_edit key='signature' direct=true
             if signature_saved
                 .ui.big.green.fluid.button.submit_guest
-                    | Submit
+                    | submit
                     i.right.chevron.icon
