--- a/client/profile/user_edit.jade
+++ b/client/profile/user_edit.jade
@@ -36,7 +36,7 @@ template(name='user_edit')
                                 .ui.hidden.divider
                                 +number_edit key='building_number' label='building #' direct=true
                                 .ui.hidden.divider
-                                +text_edit key='building_code' label='Building Code' direct=true
+                                +text_edit key='building_code' label='building code' direct=true
                                 +date_edit key='start_date' label='start date' direct=true
                                 .ui.hidden.divider
                                 +pdf_edit key='lease_agreement' label='lease agreement' direct=true
